<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <FrameLayout
        android:id="@+id/frame_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout

            android:id="@+id/constraint_main_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                android:id="@+id/text_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/sunrise_and_sunset_times_in"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/today"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.001"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_city_name" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_date">

                <include layout="@layout/item_sunrise" />

                <include layout="@layout/item_sunset" />

                <TextView
                    android:id="@+id/text_day_length"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:text="@string/day_length" />

                <TextView
                    android:id="@+id/id_text_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/time_zone_warning"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="10sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linear_load_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/text_loading_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/loading_location" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_error_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_error_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="Network error"
                android:textColor="@android:color/holo_red_dark" />

            <Button
                android:id="@+id/button_try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/try_again" />

        </LinearLayout>
    </FrameLayout>
</ScrollView>